[gd_scene load_steps=5 format=3 uid="uid://d1s7rnpobkfdr"]

[ext_resource type="Script" path="res://Scripts/item_cylinder.gd" id="1_3wj6h"]
[ext_resource type="Texture2D" uid="uid://dtw5yefe3y6m1" path="res://Art/Cylinder.png" id="1_xcrsx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myior"]
size = Vector2(67, 60.241)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs5ab"]
size = Vector2(85, 61)

[node name="ItemCylinder" type="Node2D"]
script = ExtResource("1_3wj6h")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5.5, 25.5)
scale = Vector2(1, 0.415)
shape = SubResource("RectangleShape2D_myior")

[node name="Cylinder" type="Sprite2D" parent="."]
texture = ExtResource("1_xcrsx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 20.5)
shape = SubResource("RectangleShape2D_qs5ab")

[node name="Bag" type="Node" parent="."]

[node name="Junk" type="Node" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
